# mathcmd

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  flatpak.yaml  main.cpp
.github/workflows/: rust.yml
lib/: getint.hpp  strint.hpp
locales/: app.yaml  app.yml  en.toml  en.yaml  fr.toml  fr.yaml  zh-CN.toml  zh-CN.yaml
programs/: #calc#  .#calc  .#mathcmd  calc  mathcmd  mathcmd.hpp  solvex  solvex.hpp  solvex.h~  solvex~
src/: cache.rs  calc.rs  complex.rs  data.rs  functions.rs  input.rs  main.rs  mathcmd.rs  mathcmd_lib.rs  memory.rs  memory_calc.rs  output.rs  point.rs  solve.rs  solvex.rs
src/functions/: algebra.rs  geometry.rs
src/libs/: cache.rs  complex.rs  error.rs  expr.rs  expression.rs  memory.rs  mod.rs  output.rs  point.rs
src/modules/: calc.rs  geo.rs  mod.rs  solve.rs
