[package]
name = "mathcmd"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
current_locale = "0.1.1"
rust-i18n = "3.0.1"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
